--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,15 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+/************************
+         GLOBAL
+************************/
+body {
+  font-family: var(--font-family-base);
+}
+
+pre,
+code {
+  font-family: var(--font-family-mono);
+}
